--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
-git push -u origin master{
+{
     "ConnectionStrings": {
         "DefaultConnection": "Server=DESKTOP-DVBVM5G\\SQLEXPRESS01;Database=Proyecto;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
     "Jwt": {
-        "Key": "ClaveSecretaSuperseguraParaMicroserviciosWeb2025",
+        "Key": "ClaveSecretaSuperseguraParaProyectoMicroserviciosWeb123!",
         "Issuer": "MicroserviciosWebAPI",
         "Audience": "MicroserviciosWebClients"
     },
